github_data_collector/src/data/issue_comment/schochastics_graphlayouts.txt
Here are the errors:

```
* installing *source* package ‘graphlayouts’ ...
** package ‘graphlayouts’ successfully unpacked and MD5 sums checked
** libs
clang++  -I/Library/Frameworks/R.framework/Resources/include -DNDEBUG  -I"/Library/Frameworks/R.framework/Versions/3.4/Resources/library/Rcpp/include" -I"/Library/Frameworks/R.framework/Versions/3.4/Resources/library/RcppArmadillo/include" -I/usr/local/include   -fPIC  -Wall -g -O2  -c RcppExports.cpp -o RcppExports.o
clang++  -I/Library/Frameworks/R.framework/Resources/include -DNDEBUG  -I"/Library/Frameworks/R.framework/Versions/3.4/Resources/library/Rcpp/include" -I"/Library/Frameworks/R.framework/Versions/3.4/Resources/library/RcppArmadillo/include" -I/usr/local/include   -fPIC  -Wall -g -O2  -c reweight.cpp -o reweight.o
clang++  -I/Library/Frameworks/R.framework/Resources/include -DNDEBUG  -I"/Library/Frameworks/R.framework/Versions/3.4/Resources/library/Rcpp/include" -I"/Library/Frameworks/R.framework/Versions/3.4/Resources/library/RcppArmadillo/include" -I/usr/local/include   -fPIC  -Wall -g -O2  -c sparseStress.cpp -o sparseStress.o
sparseStress.cpp:72:21: error: no type named 'const_col_iterator' in 'arma::SpMat<double>'; did you mean 'const_row_iterator'?
      arma::sp_mat::const_col_iterator start = A.begin_col(i);
      ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~
                    const_row_iterator
/Library/Frameworks/R.framework/Versions/3.4/Resources/library/RcppArmadillo/include/armadillo_bits/SpMat_bones.hpp:448:9: note: 'const_row_iterator' declared here
  class const_row_iterator : public iterator_base
        ^
sparseStress.cpp:72:40: error: no viable conversion from 'arma::SpMat<double>::iterator' to 'arma::sp_mat::const_row_iterator'
      arma::sp_mat::const_col_iterator start = A.begin_col(i);
                                       ^       ~~~~~~~~~~~~~~
/Library/Frameworks/R.framework/Versions/3.4/Resources/library/RcppArmadillo/include/armadillo_bits/SpMat_bones.hpp:453:12: note: candidate constructor not viable: no known conversion from 'arma::SpMat<double>::iterator' to 'const arma::SpMat<double> &' for 1st argument
    inline const_row_iterator(const SpMat& in_M, uword initial_pos = 0);
           ^
/Library/Frameworks/R.framework/Versions/3.4/Resources/library/RcppArmadillo/include/armadillo_bits/SpMat_bones.hpp:456:12: note: candidate constructor not viable: no known conversion from 'arma::SpMat<double>::iterator' to 'const arma::SpMat<double>::const_row_iterator &' for 1st argument
    inline const_row_iterator(const const_row_iterator& other);
           ^
sparseStress.cpp:73:40: error: use of undeclared identifier 'end'; did you mean 'std::end'?
      arma::sp_mat::const_col_iterator end = A.end_col(i);
                                       ^~~
                                       std::end
/Library/Developer/CommandLineTools/usr/include/c++/v1/iterator:1650:1: note: 'std::end' declared here
end(_Tp (&__array)[_Np])
^
sparseStress.cpp:73:39: error: expected ';' after expression
      arma::sp_mat::const_col_iterator end = A.end_col(i);
                                      ^
                                      ;
sparseStress.cpp:73:21: error: no member named 'const_col_iterator' in 'arma::SpMat<double>'
      arma::sp_mat::const_col_iterator end = A.end_col(i);
      ~~~~~~~~~~~~~~^
sparseStress.cpp:73:48: error: assigning to '<overloaded function type>' from incompatible type 'arma::SpMat<double>::iterator'
      arma::sp_mat::const_col_iterator end = A.end_col(i);
                                             ~~^~~~~~~~~~
sparseStress.cpp:74:25: error: no type named 'const_col_iterator' in 'arma::SpMat<double>'; did you mean 'const_row_iterator'?
      for(arma::sp_mat::const_col_iterator k = start; k != end; ++k){
          ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~
                        const_row_iterator
/Library/Frameworks/R.framework/Versions/3.4/Resources/library/RcppArmadillo/include/armadillo_bits/SpMat_bones.hpp:448:9: note: 'const_row_iterator' declared here
  class const_row_iterator : public iterator_base
        ^
sparseStress.cpp:74:60: error: use of undeclared identifier 'end'
      for(arma::sp_mat::const_col_iterator k = start; k != end; ++k){
                                                           ^
8 errors generated.
make: *** [sparseStress.o] Error 1
ERROR: compilation failed for package ‘graphlayouts’
* removing ‘/Library/Frameworks/R.framework/Versions/3.4/Resources/library/graphlayouts’
Warning in install.packages :
  installation of package ‘graphlayouts’ had non-zero exit status
```
Could work with a constraint stress layout with fixed y-coordinates
See also https://github.com/thomasp85/ggraph/issues/174
[paper](https://kops.uni-konstanz.de/bitstream/handle/123456789/20924/Brandes_209246.pdf?sequence=2)

should be compliant with how `ggraph` and `gganimate` play together (see also #20)